--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="">
+    <link rel="icon" href="../src/assets/developer.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Ultimate React Personal Website</title>
+    <title>Ritik Portfolio</title>
 </head>
 <body>
     <div id="root"></div>
